# doc_translation_tool

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DocTranslationTool.spec  LICENSE  PACKAGING.md  README.md  README.zh-CN.md  glossary.example.json  pyproject.toml  settings.example.json  使用指南.md  开发问题记录.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-windows.yml  ci.yml
doc_translation_tool/: __init__.py  app.py  document_types.py
doc_translation_tool/config/: __init__.py  env_editor.py  settings.py
doc_translation_tool/documents/: __init__.py  base.py  dita_handler.py  registry.py
doc_translation_tool/llm/: __init__.py  client.py  (+1 more)
scripts/: build_macos.sh  build_windows.ps1  run_tests.ps1
source/: .env.example  CHANGELOG.md  CLAUDE.md  DOCS_INDEX.md  PACKAGING.md  PACKAGING_MACOS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  app.py  pyproject.toml  settings.example.json  settings参数说明.md  使用指南.md
tests/: test_dita_handler.py  test_dita_pipeline.py  test_env_editor.py  test_glossary_config_dialog.py  test_glossary_loader.py  test_lang_detect.py  test_llm_client.py  test_main_window_paths.py  test_markdown_parser.py  test_markdown_protector.py  test_markdown_segmenter.py  test_model_config_dialog.py  test_output_writer.py  test_path_line_edit.py  test_pipeline.py  test_pipeline_resume.py  test_regression_samples.py  test_settings.py  test_smoke.py  test_task_service.py  test_translation_cache.py  test_validator.py
(+100 files in other folders)
