[project]
name = "doc-translation-tool"
description = "Desktop tool for translating Markdown documents with structure preservation."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "PySide6>=6.7,<7",
    "httpx>=0.28,<1",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]
build = [
    "pyinstaller>=6.17,<7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "doc_translation_tool.__version__" }
